Update score header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
 
             <div class="column">
-                <h3 class="away">GUEST</h3>
+                <h3 class="away">AWAY</h3>
                 <h2 class="score" id="away-score">0</h2>
                 <div class="points-plus">
                     <button class="away-score-btn-1" onclick="add1Away()">+1</button>
